--- a/views/base.html
+++ b/views/base.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <meta name="description" content={% block metaDescription %}{% endblock %}/>
+    <meta name="author" content="Tatenda" />
 </head>
 <body>
     {% block body %}{% endblock %}
