--- a/views/contact-us/index.html
+++ b/views/contact-us/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Cantact Page{% endblock %}
+{% block metaDescription %}"PHP mvc website template by Prichard Mukombi"{% endblock %}
     {% block body%}
     <h1>Welcome to Cantact Page</h1>
     <p>{{username}}</p>
+    <p>{{id}}</p>
     {% endblock %}
