--- a/views/base.html
+++ b/views/base.html
@@ -2,63 +2,185 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %}</title>
-        <meta name="description" content={% block metaDescription%}{%endblock%}/>
+        <title>{% block title %}{% endblock %} | Heavenly Tech</title>
+        <meta name="description" content={% block
+            metaDescription%}{%endblock%}/>
         <meta name="author" content="Tatenda" />
         <!-- bootstrap css -->
-        <link rel="stylesheet"
-            href="public/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="public/bootstrap/css/bootstrap.min.css">
+        <!-- font awesome -->
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+        <!-- animate style -->
+        <link rel="stylesheet" href="public/css/animate.css">
+
+        <!-- custom style -->
+        <link rel="stylesheet" href="public/css/stlye.css">
+
     </head>
     <body id="page-top">
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
-            id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Start
-                    Bootstrap</a>
-                <button class="navbar-toggler" type="button"
-                    data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger"
-                                href="#services">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger"
-                                href="#contact">Contact</a>
-                        </li>
-                    </ul>
+        <header class="fixed-top">
+            <div class="top-bar">
+                <div class="container">
+                    <div class="py-1"></div>
+                    <div class="row top-bar-left">
+                        <div class="col-lg-6 my-auto">
+                            <ul class="px-0 mx-0 my-auto">
+                                <li>
+                                    <i class="fas fa-envelope"></i>
+                                    <span class="mx-1">info@heavenilytech.com</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-phone-alt"></i>
+                                    <span class="mx-1">+27(0) 84 844 4486</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6 float-lg-right">
+                            <ul class="top-bar-right">
+                                <li>
+                                    <a
+                                        href="https://www.linkedin.com/company/heavenily-tech"><i
+                                            class="fab fa-linkedin linkedin-bg"></i></a>
+                                    <!-- <span class="mx-1"><a href="https://www.linkedin.com/company/heavenily-tech">Heavenily Tech</a></span> -->
+                                </li>
+                                <!-- <li>
+                                    <a href="skype:live:mukombitatenda_1?chat"><i class="fab fa-skype skype-bg"></i></a>
+                               </li> -->
+                                <li>
+                                    <a href=""><i class="fab fa-facebook
+                                            facebook-bg"></i></a>
+                                </li>
+                                <li>
+                                    <a href=""><i class="fab fa-twitter-square
+                                            twitter-bg"></i></a>
+                                </li>
+                                <li>
+                                    <a href=""><i class="fab fa-youtube
+                                            youtube-bg"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
+
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-lg"id="mainNav">
+                <div class="container">
+                    <a class="navbar-brand"href="home">
+                        <img src="public/img/logo-heavenly.png" class="img-fluid"></a>
+                    <button class="navbar-toggler" type="button"
+                        data-toggle="collapse" data-target="#navbarResponsive"
+                        aria-controls="navbarResponsive" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"><i class="fas fa-align-justify"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link"href="home">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about-us">About</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle"
+                                    href="services">Services</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="#">Link 1</a>
+                                    <a class="dropdown-item" href="#">Link 2</a>
+                                    <a class="dropdown-item" href="#">Link 3</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio">portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"
+                                    href="contact-us">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
         {% block body %}{% endblock %}
         <!-- strat footer -->
-        <footer class="py-5 bg-dark">
+        <footer class=" bg-dark">
             <div class="container">
-                <p class="m-0 text-center text-white">Copyright &copy; Your
-                    Website 2019</p>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div>
+                            <img src="public/img/logo-heavenly.png" alt="Heavenily Logo" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-3 contact-details">
+                        <div>
+                            <h4>Get in Touch</h4>
+                         <div class=" container-fluid ">
+                            <div class="mx-auto ">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>
+                                    17 Galway Road<br/>
+                                    Summer Greens<br/>
+                                    Cape Town, 7441<br/>
+                                    South Africa
+                                </span>                                  
+                            </div>
+                         </div>
+                                
+                            <br/>
+                            <div class=" container-fluid float-left">
+                                <div class="mx-auto contact-details">
+                                    <i class="fas fa-envelope"></i>
+                              
+                                    <span>
+                                        info@heavenilytech.com
+                                    </span>
+                                </div>
+                            </div>
+                            <br/>
+                            <div class=" container-fluid float-left">                           
+                            
+                                        <div class="mx-auto contact-details">
+                                            <i class="fas fa-phone-alt"></i>                             
+                                            <span>
+                                                +27(0) 84 844 4486
+                                            </span>
+                                        </div>                                
+                                                         
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <hr class="my-1 horizontal-line-colour">
+            <div class=" theme-bg">
+                <div class="container p-3">
+                    <p class="m-0 text-center text-white">Copyright &copy; Heavenily Tech 2020</p>
+                </div>
+            </div>
+          
             <!-- /.container -->
         </footer>
         <!-- end footer -->
 
         <!-- javascript -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="public/bootstrap/js/bootstrap.min.js"></script>
+        <script src="public/js/main.js"></script>
 
     </body>
 </html>
