--- a/views/home/index.html
+++ b/views/home/index.html
@@ -48,6 +48,43 @@
       </a>
     </div>
   </div>
+<section>
+  <div class=" container pt-4">
+    <div class="row service-home">
+      <div class="col-lg-3">
+        <div class="service-block shadow p-3 mb-5 bg-white rounded">
+          <div class="text-center">
+            <h3>Websites</h3>
+          </div>          
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="service-block shadow p-3 mb-5 bg-white rounded">
+          <div class="text-center">
+            <h3>Mobile Apps</h3>
+          </div>          
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="service-block shadow p-3 mb-5 bg-white rounded">
+          <div class="text-center">
+            <h3>Graphics</h3>
+          </div>          
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="service-block shadow p-3 mb-5 bg-white rounded">
+          <div class="text-center">
+            <h3>Printing</h3>
+          </div>          
+        </div>
+      </div>
+    </div>
+    <div class=" text-center">
+      <a href="services" class="btn btn-primary shadow">View All Services</a>
+    </div>
+  </div>
+</section>
 
   <section id="about">
     <div class="container">
