--- a/views/portfolio/index.html
+++ b/views/portfolio/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Portfolio{%endblock%}
-{%block body%}
+{% block title %}Portfolio{% endblock %}
+{% block metaDescription %}"PHP mvc website template by Prichard Mukombi"{% endblock %}
+{% block body%}
 
+{% include 'layout/topbanner.html' %}
 {%endblock%}
