--- a/public/css/stlye.scss
+++ b/public/css/stlye.scss
@@ -1,147 +1,360 @@
+
 $theme: #008000;
-.theme-bg{
-background-color: $theme;
-color: #ffffff;
+@import '_button';
+.theme-bg {
+    background-color: $theme;
+    color: #ffffff;
 }
-.theme-text{
+
+.theme-text {
     color: $theme;
 }
-.top-bar{
+
+.top-bar {
     border-bottom: 1px solid $theme;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     color: #ffffff;
-    ul{
+
+    ul {
         list-style-type: none;
-        li{
+
+        li {
             display: inline-block;
-            
-            i{
-                padding: 0.4em;    
-                color: $theme;                
+
+            i {
+                padding: 0.4em;
+                color: $theme;
             }
-            a>i{
+
+            a>i {
                 padding: 0.16em;
                 border-radius: 50%;
                 font-size: 1.5em;
             }
         }
     }
-    .linkedin-bg{
+
+    .linkedin-bg {
         color: #0077B5;
+
+        &:hover {
+            color: $theme;
+        }
     }
-    .facebook-bg{
-        color:#4267B2;
+
+    .facebook-bg {
+        color: #4267B2;
+
+        &:hover {
+            color: $theme;
+        }
     }
-    .twitter-bg{
+
+    .twitter-bg {
         color: #1DA1F2;
+
+        &:hover {
+            color: $theme;
+        }
     }
-    .youtube-bg{
+
+    .youtube-bg {
         color: #FF0000;
+
+        &:hover {
+            color: $theme;
+        }
     }
-    .skype-bg{
+
+    .skype-bg {
         color: #28A8EA;
+
+        &:hover {
+            color: $theme;
+        }
     }
-.top-bar-left{
-    padding: 0px;
-}
-.top-bar-right{
-    right: 0px;
-    margin-right: 0px;
-    float: right;
-}
-@media only screen and (max-width: 920px){
-    display: none;
-}
+
+    .top-bar-left {
+        padding: 0px;
+    }
+
+    .top-bar-right {
+        right: 0px;
+        margin-right: 0px;
+        float: right;
+    }
+
+    @media only screen and (max-width: 992px) {
+        display: none !important;
+    }
 
 }
 
-.navbar{
+.navbar {
     background-color: transparent;
-    .navbar-brand{
+
+    .navbar-brand {
         width: 250px;
         height: auto;
+
+        @media only screen and (max-width: 992px) {
+            width: 150;
+            height: auto;
+        }
+
     }
-    .navbar-brand-scroll{
+
+    .navbar-brand-scroll {
         width: 150;
         height: auto;
     }
-  li a{
+
+    li a {
         text-transform: uppercase;
         font-weight: 600;
         color: #ffffff;
-        &:hover{
+
+        &:hover {
             color: $theme;
         }
-        
-    }
-}
-.navbar-scroll{
-    border-bottom: 1px solid $theme;
-    background-color: rgba(0,0,0,0.7);
-}
-.banner-section{
 
-.carousel-caption{
-    background-color: rgba(0,0,0,0.8);
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    bottom: 0px;
-    .caption-text{
-        position: relative;
-        top: 70%;
-        h5{
-            animation-delay: 3s;
+    }
+
+    @media only screen and (max-width: 992px) {
+        border-bottom: 1px solid $theme;
+        background-color: rgba(0, 0, 0, 0.8);
+        border-radius: 2px;
+        box-shadow: 0px 1px 10px #999;
+    }
+    .navbar-toggler-icon{
+        i{
+            padding: 0px;
+            font-size: 2em;
+            color: #ffffff;
+        }        
+    }
+
+}
+
+.navbar-scroll {
+    border-bottom: 1px solid $theme;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 2px;
+    box-shadow: 0px 1px 10px #999;
+}
+
+
+.banner-section {
+    .carousel-caption {
+        background-color: rgba(0, 0, 0, 0.8);
+        width: 100%;
+        height: 100%;
+        left: 0px;
+        bottom: 0px;
+
+        .caption-text {
+            position: relative;
+            top: 70%;
+
+            h5 {
+                animation-delay: 3s;
+            }
         }
     }
-}
-.carousel-control-prev{
-    z-index: 10;
-}
-.carousel-control-next{
-    z-index: 10;
-}
-.carousel-indicators li {
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-}
+
+    .carousel-control-prev {
+        z-index: 10;
+    }
+
+    .carousel-control-next {
+        z-index: 10;
+    }
+
+    .carousel-indicators li {
+        width: 10px;
+        height: 10px;
+        border-radius: 100%;
+    }
 
 }
-.h-banner{
+
+.top-banner {
+
+    .banner-img {
+        -webkit-background-size: cover;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 50vh;
+
+        @media only screen and (max-width: 920px) {
+            height: 40vh;
+        }
+    }
+
+    .top-banner-text {
+        background-color: rgba(0, 0, 0, 0.8);
+        width: 100%;
+        height: 100%;
+        left: 0px;
+        bottom: 0px;
+
+        .text-banner {
+            position: relative;
+            top: 70%;
+
+            h5 {
+                font-weight: 600;
+                font-size: 2em;
+                color: #ffffff;
+            }
+
+            p {
+                a {
+                    color: #ffffff;
+                    text-decoration: none;
+                }
+
+                i {
+                    color: #ffffff;
+                    padding-left: 0.4em;
+                    padding-right: 0.4em;
+                }
+
+                span {
+                    color: $theme;
+                }
+            }
+            
+            @media only screen and (max-width: 992px) {
+                top: 55%;
+            }
+        }
+    }
+
+}
+
+.h-banner {
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 80vh;    
+    height: 80vh;
+
+    @media only screen and (max-width: 992px) {
+        height: 40vh;
+    }
 }
 
-.dropdown{
-    &:hover.dropdown-menu{
+.dropdown {
+    &:hover.dropdown-menu {
         display: block;
     }
 }
 
-footer{
-    .horizontal-line-colour{
+footer {
+    background-color: #1F1F1F;
+    color: #cccccc;
+
+    .horizontal-line-colour {
         color: #dddddd;
     }
-    .contact-details{
+
+    .contact-details {
         margin: 0 auto;
+
         // text-align: justify;
-        h4{
-            text-align: center;
+        h4 {
+            text-align: left;
+            font-weight: 600;
+            font-size: 1.5em;
+            color: $theme;
+
         }
-        i{
+
+        i {
             color: $theme;
             padding: 0.2em;
-            
+
             float: left;
         }
-        span{
+
+        span {
             float: left;
             text-align: left;
         }
     }
+
+    .footer-quick-links {
+        h4 {
+            text-align: left;
+            font-weight: 600;
+            font-size: 1.5em;
+            color: $theme;
+
+        }
+
+        ul {
+            list-style-type: none;
+
+            li {
+                &::before {
+                    font-family: FontAwesome;
+                    display: inline-block;
+                    padding-right: 6px;
+                    font-weight: 900;
+                    content: "\f105";
+
+                }
+            }
+        }
+    }
+
+    .footer-about {
+        img {
+            width: 160px;
+        }
+
+        i {
+            padding: 0.5em;
+            border: 1px solid #cccccc;
+            border-radius: 50%;
+            margin: 1px 3px 5px 6px;
+            color: #cccccc;
+
+            &:hover {
+                background-color: $theme;
+            }
+        }
+    }
+}
+
+// home page
+.service-home{
+    h3{
+        font-size: 1.3em;
+    }
+}
+
+// contact page
+.contact-section{
+    i{
+        color: #ffffff;
+        font-size: 2em;
+        background-color: $theme;
+        padding: 0.5em;
+        border-radius: 50%;
+    }
+    .shadow{
+        border-radius: 0.5em;
+        .contact-info{
+            height: 30vh;
+        .text-contact{
+            
+        }
+        }        
+    }
+  
 }
