--- a/views/about-us/index.html
+++ b/views/about-us/index.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% block title %}About Us{%endblock%}
-{%block body%}
+{% block title %}About Us{% endblock %}
+{% block metaDescription %}"PHP mvc website template by Prichard Mukombi"{% endblock %}
+{% block body%}
+
+{% include 'layout/topbanner.html' %}
 
 {%endblock%}
