--- a/views/base.html
+++ b/views/base.html
@@ -42,11 +42,8 @@
                                     <a
                                         href="https://www.linkedin.com/company/heavenily-tech"><i
                                             class="fab fa-linkedin linkedin-bg"></i></a>
-                                    <!-- <span class="mx-1"><a href="https://www.linkedin.com/company/heavenily-tech">Heavenily Tech</a></span> -->
                                 </li>
-                                <!-- <li>
-                                    <a href="skype:live:mukombitatenda_1?chat"><i class="fab fa-skype skype-bg"></i></a>
-                               </li> -->
+
                                 <li>
                                     <a href=""><i class="fab fa-facebook
                                             facebook-bg"></i></a>
@@ -66,20 +63,22 @@
             </div>
 
             <!-- Navigation -->
-            <nav class="navbar navbar-expand-lg"id="mainNav">
+            <nav class="navbar navbar-expand-lg" id="mainNav">
                 <div class="container">
-                    <a class="navbar-brand"href="home">
-                        <img src="public/img/logo-heavenly.png" class="img-fluid"></a>
+                    <a class="navbar-brand" href="home">
+                        <img src="public/img/logo-heavenly.png"
+                            class="img-fluid"></a>
                     <button class="navbar-toggler" type="button"
                         data-toggle="collapse" data-target="#navbarResponsive"
                         aria-controls="navbarResponsive" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><i class="fas fa-align-justify"></i></span>
+                        <span class="navbar-toggler-icon"><i class="fas
+                                fa-align-justify"></i></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link"href="home">Home</a>
+                                <a class="nav-link" href="home">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us">About</a>
@@ -108,79 +107,110 @@
 
         {% block body %}{% endblock %}
         <!-- strat footer -->
-        <footer class=" bg-dark">
+        <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div>
-                            <img src="public/img/logo-heavenly.png" alt="Heavenily Logo" class="img-fluid">
+                        <div class="footer-about">
+                            <img src="public/img/logo-heavenly.png"
+                                alt="Heavenily Logo" class="img-fluid">
+                            <div>
+                                <p>
+                                    We’re experts in making content go on
+                                    computers, smartphones or any web-enabled
+                                    device.
+                                    When your website needs maintenance and
+                                    support, our team has you covered.
+                                </p>
+                                <div class="text-left">
+                                    <a href=""> <i class="fab fa-facebook-f"></i></a>
+                                    <a href=""><i class="fab fa-twitter"></i></a>
+                                    <a href=""> <i class="fab fa-google-plus-g"></i></a>
+                                    <a href=""><i class="fab fa-youtube"></i></a>
+                                    <a href=""> <i class="fab fa-linkedin-in"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 footer-quick-links">
                         <div>
-
+                            <h4>Quick Links</h4>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><i class="fas fa-angle-right"></i> Home</li>
+                                <li>About Us</li>
+                                <li>Services</li>
+                                <li>Portfolio</li>
+                                <li>Contact Us</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-lg-3 contact-details">
+                    <div class="col-lg-4 contact-details">
                         <div>
                             <h4>Get in Touch</h4>
-                         <div class=" container-fluid ">
-                            <div class="mx-auto ">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <span>
-                                    17 Galway Road<br/>
-                                    Summer Greens<br/>
-                                    Cape Town, 7441<br/>
-                                    South Africa
-                                </span>                                  
-                            </div>
-                         </div>
-                                
-                            <br/>
-                            <div class=" container-fluid float-left">
-                                <div class="mx-auto contact-details">
-                                    <i class="fas fa-envelope"></i>
-                              
-                                    <span>
-                                        info@heavenilytech.com
+                            <div class="container-fluid">
+                                <div class="mx-auto">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span class="float-right">
+                                        17 Galway Road,
+                                        Summer Greens,
+                                        Cape Town, 7441,
+                                        South Africa
                                     </span>
                                 </div>
                             </div>
+
                             <br/>
-                            <div class=" container-fluid float-left">                           
-                            
-                                        <div class="mx-auto contact-details">
-                                            <i class="fas fa-phone-alt"></i>                             
+                                <div class="container-fluid
+                                    float-left">
+                                    <div class="mx-auto
+                                        contact-details">
+                                        <i class="fas fa-envelope"></i>
+                                        <span>
+                                            info@heavenilytech.com
+                                        </span>
+                                    </div>
+                                </div>
+                                <br/>
+                                    <div class="container-fluid
+                                        float-left">
+
+                                        <div class="mx-auto
+                                            contact-details">
+                                            <i class="fas
+                                                fa-phone-alt"></i>
                                             <span>
                                                 +27(0) 84 844 4486
                                             </span>
-                                        </div>                                
-                                                         
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <hr class="my-1 horizontal-line-colour">
-            <div class=" theme-bg">
-                <div class="container p-3">
-                    <p class="m-0 text-center text-white">Copyright &copy; Heavenily Tech 2020</p>
-                </div>
-            </div>
-          
-            <!-- /.container -->
-        </footer>
-        <!-- end footer -->
+                    <hr class="my-1 horizontal-line-colour">
+                    <div class="theme-bg">
+                        <div class="container p-3">
+                            <p class="m-0 text-center text-white">Copyright
+                                &copy; Heavenily Tech 2020. All Right Reserved</p>
+                        </div>
+                    </div>
 
-        <!-- javascript -->
-        <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="public/bootstrap/js/bootstrap.min.js"></script>
-        <script src="public/js/main.js"></script>
+                    <!-- /.container -->
+                </footer>
+                <!-- end footer -->
 
-    </body>
-</html>
+                <!-- javascript -->
+                <script
+                    src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                <script
+                    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+                <script
+                    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+                <script src="public/bootstrap/js/bootstrap.min.js"></script>
+                <script src="public/js/main.js"></script>
+
+            </body>
+        </html>
