--- a/views/contact-us/index.html
+++ b/views/contact-us/index.html
@@ -1,9 +1,88 @@
-{% extends "base.html" %}
-{% block title %}Cantact Page{% endblock %}
-{% block metaDescription %}"PHP mvc website template by Prichard Mukombi"{% endblock %}
-    {% block body%}
-    <h1>Welcome to Cantact Page</h1>
-    <p>{{username}}</p>
-    <p>{{id}}</p>
-    <p>{{ROOT}}</p>
-    {% endblock %}
+{% extends "base.html" %} {% block title %}Contact Us{% endblock %} {% block
+metaDescription %}"PHP mvc website template by Prichard Mukombi"{% endblock %}
+{% block body%} {% include 'layout/topbanner.html' %}
+<section>
+    <div class="container pt-5 pb-4">
+        <div class="row">
+            <div class="col-lg-6 mx-auto">
+                <div class="row text-center contact-section mx-auto">
+                    <div class="col-lg-6 mx-auto">
+                        <div class="shadow mb-3">
+                            <div class="pt-3 contact-info">
+                                <i class="fas fa-envelope"></i>
+                                <h5>
+                                    Mail Us
+                                </h5>
+                                <div class="text-contact pt-1">
+                                    info@heavenilytech.com
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mx-auto">
+                        <div class="shadow mb-3">
+                            <div class="pt-3 contact-info">
+                                <i class="fas fa-phone-alt"></i>
+                                <h5>
+                                    Call Us
+                                </h5>
+                                <div class="text-contact pt-1">
+                                    +27(0) 84 844 4486
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-lg-3">
+                  <div class="shadow mb-3">
+                    <div class=" pt-3 contact-info">
+                      <i class="fas fa-map-marker-alt"></i>
+                      <h5>
+                          Vist Us
+                      </h5>
+                      <div>
+                          17 Galway Road, Summer Greens, Cape Town, 7441, South Africa
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <div>
+                    <form action="contact-us/send" method="POST"
+                        class="form-group">
+                        <div class="form-group">
+                            <input  type="text"  class="form-control"  name="name" id="name" placeholder="Enter name"/>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Enter Phone">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter email"/>
+                                </div>
+                            </div>
+                        </div>
+                       
+                        <div class="form-group">
+                            <textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Message"></textarea>
+                        </div>
+                        <div class="text-center">
+                            <input type="submit" class="btn btn-primary p-2 pl-3 pr-3" name="submit" value="Send"/>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
