--- a/views/base.html
+++ b/views/base.html
@@ -186,6 +186,15 @@
                                         </div>
 
                                     </div>
+                                    <br/>
+                                    <div class="container-fluid float-left">
+                                        <div class="mx-auto contact-details">
+                                            <i class="fas fa-globe"></i>
+                                            <span>
+                                                www.heavenilytech.com
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
