--- a/views/base.html
+++ b/views/base.html
@@ -2,9 +2,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %} | Heavenly Tech</title>
-        <meta name="description" content={% block
-            metaDescription%}{%endblock%}/>
+        <title>{% block title %}{% endblock %} | Heavenily Tech</title>
+        <meta name="description" content={% block metaDescription%}{%endblock%}/>
+        <meta name="keywords" content={% block metaKeywords %}{%endblock%}>
         <meta name="author" content="Tatenda" />
         <!-- bootstrap css -->
         <link rel="stylesheet" href="public/bootstrap/css/bootstrap.min.css">
