--- a/views/contact-us/index.html
+++ b/views/contact-us/index.html
@@ -3,6 +3,10 @@ metaDescription %}"PHP mvc website template by Prichard Mukombi"{% endblock %}
 {% block body%} {% include 'layout/topbanner.html' %}
 <section>
     <div class="container pt-5 pb-4">
+        <div class=" text-center ">
+            <h3>Get In Touch</h3>
+            <div class="theme-bottom-border mx-auto"></div>
+        </div>
         <div class="row">
             <div class="col-lg-6 mx-auto">
                 <div class="row text-center contact-section mx-auto">
